--- a/windowsinstall.yml
+++ b/windowsinstall.yml
@@ -12,11 +12,8 @@
       win_chocolatey:
         name: firefox
         state: present
-- name: install and pin Notepad++ at 7.6.3
-  win_chocolatey:
-    name: notepadplusplus
-    version: 7.6.3
-    pinned: yes
-    state: present
-
+    - name: Install git from a pre configured source (win_chocolatey_source)
+       win_chocolatey:
+        name: git
+       source: internal_repo
   
