--- a/server.yml
+++ b/server.yml
@@ -1,5 +1,7 @@
   ---
-  -hosts=all
+ -hosts: all
+  gather_facts: yes
+  tasks:
   - name: install windows feature AD-DS on DCs
     win_feature:
       name: AD-Domain-Services
