--- a/windowsinstall.yml
+++ b/windowsinstall.yml
@@ -8,6 +8,15 @@
   hosts: all
   gather_facts: true
   tasks:
+    - name: install windows feature AD-DS on DCs
+    win_feature:
+      name: AD-Domain-Services
+      state: present
+      include_management_tools: yes
+      include_sub_features: yes
+    when: ansible_facts.memtotal_mb == 4096
+    register: adds_install
+    
     - name: Install Firefox
       win_chocolatey:
         name: 
@@ -25,3 +34,5 @@
         - keepass.install
         - wsus-offline-update
         state: present
+ 
+
