--- a/windowsinstall.yml
+++ b/windowsinstall.yml
@@ -8,15 +8,6 @@
   hosts: all
   gather_facts: true
   tasks:
-    - name: install windows feature AD-DS on DCs
-    win_feature:
-      name: AD-Domain-Services
-      state: present
-      include_management_tools: yes
-      include_sub_features: yes
-    when: ansible_facts.memtotal_mb == 4096
-    register: adds_install
-    
     - name: Install Firefox
       win_chocolatey:
         name: 
@@ -34,5 +25,13 @@
         - keepass.install
         - wsus-offline-update
         state: present
- 
+  -name: Install Mobaxtrem
+  win_unzip:
+        src: https://download.mobatek.net/1242019111120613/MobaXterm_Portable_v12.4.zip
+        dest: C:\Program Files
+        recurse: yes
+        delete_archive: yes
+   win_package:
+    path: C:\Program Files\MobaXterm_Installer_v12.4\MobaXterm_installer_12.4.msi
+    state: present
 
