--- a/windowsinstall.yml
+++ b/windowsinstall.yml
@@ -25,7 +25,7 @@
         - keepass.install
         - wsus-offline-update
         state: present
-
+- name: ensure mobatek is installed via win_package
     win_get_url:
     url: https://download.mobatek.net/1242019111120613/MobaXterm_Installer_v12.4.zip
     dest: C:\temp\
@@ -33,7 +33,7 @@
   unarchive:
   src: C:\temp\MobaXterm_Installer_v12.4.zip
   dest: C:\MobaXterm_Installer_v12.4
-  
+ - name: mobatek the zip file 
    win_package:
     path: C:\MobaXterm_Installer_v12.4\MobaXterm_installer_12.4.msi
     state: present
