--- a/windowsinstall.yml
+++ b/windowsinstall.yml
@@ -25,14 +25,19 @@
         - keepass.install
         - wsus-offline-update
         state: present
- # install/uninstall with win_package
-    - name: download the 7-Zip package
-      win_get_url:
-        url: http://www.7-zip.org/a/7z1701-x64.msi
-        dest: C:\temp\7z.msi
         
-    - name: ensure 7-Zip is installed via win_package
-      win_package:
-        path: C:\temp\7z.msi
-        state: present
+    - name: ensure mobatek is installed via win_package
+      win_get_url:
+        url: https://download.mobatek.net/1242019111120613/MobaXterm_Installer_v12.4.zip
+        dest: C:\
     
+    - name: Unarchives the zip file
+      unarchive:
+        src: C:\MobaXterm_Installer_v12.4.zip
+        dest: C:\MobaXterm_Installer_v12.4
+    
+    - name: mobatek the zip file 
+      win_package:
+        path: C:\MobaXterm_Installer_v12.4\MobaXterm_installer_12.4.msi
+        state: present
+  
