--- a/windowsinstall.yml
+++ b/windowsinstall.yml
@@ -24,9 +24,31 @@
         - autoruns
         - keepass.install
         - wsus-offline-update
+        - angryip
+        - advanced-ip-scanner
+        - nmap
+        - wakemeonlan
+        - chocolatey-core.extension
+        - vcredist140
+        - winlogbeat
+        - winscp
+        - chocolateygui
+        - microsoft-teams.install
+        - visualstudio2019community
         state: present
         
-     
+    #  - name: ensure mobatek is installed via win_package
+     # win_get_url:
+      #  url: https://download.mobatek.net/1242019111120613/MobaXterm_Installer_v12.4.zip
+       # dest: C:\
+    
+    #- name: Unarchives the zip file
+     # win_unzip:
+      #  src: C:\MobaXterm_Installer_v12.4.zip
+       # dest: C:\temp
+        #recurse: yes
+        #delete_archive: yes
+      
     - name: mobatek the zip file 
       win_package:
         path: C:\temp\MobaXterm_installer_12.4.msi
