--- a/linux.yml
+++ b/linux.yml
@@ -1,13 +1,10 @@
-- name: perform yum update / reboot server
-  hosts: ucpl_linux
-  become: true
-  become_method: sudo
- 
+- hosts: all
+  gather_facts: false
+  vars:
+    ssh_key: '/root/.ssh/id_rsa.pub'
   tasks:
-        - name: Perform yum update of all packages
-          yum:
-            name: '*'
-            state: latest
-        - name: Reboot server
-          command: /sbin/shutdown -r +1
-          ignore_errors: true
+    - name: copy ssh key
+      authorized_key:
+        key: "{{ lookup('file', ssh_key) }}"
+        user: root
+
