--- a/linux.yml
+++ b/linux.yml
@@ -1,10 +1,16 @@
 - hosts: all
   gather_facts: false
-  vars:
-    ssh_key: '/root/.ssh/id_rsa.pub'
-  tasks:
-    - name: copy ssh key
-      authorized_key:
-        key: "{{ lookup('file', ssh_key) }}"
-        user: root
 
+- name: perform yum update / reboot server     
+     - name: Perform yum update of all packages
+          yum:
+            name: '*'
+            state: latest
+    
+    - name: Reboot server
+          command: /sbin/shutdown -r +1
+          ignore_errors: true     
+
+#  hosts: ucpl_linux
+  #become: true
+ # become_method: sudo
