--- a/linux.yml
+++ b/linux.yml
@@ -1,15 +1,15 @@
 - hosts: all
   gather_facts: false
-
-- name: perform yum update / reboot server     
-     - name: Perform yum update of all packages
-          yum:
+ 
+ tasks:
+    - name: Perform yum update of all packages
+            yum:
             name: '*'
             state: latest
     
     - name: Reboot server
-          command: /sbin/shutdown -r +1
-          ignore_errors: true     
+           command: /sbin/shutdown -r +1
+           ignore_errors: true     
 
 #  hosts: ucpl_linux
   #become: true
