--- a/linux.yml
+++ b/linux.yml
@@ -1,9 +1,13 @@
+---
+# performYumUpdateRebootServer.yml
+# performs yum update and reboots server
 - name: perform yum update / reboot server
-    hosts: all
-    remote_user: root
+  hosts: all
+  remote_user: root
   #become: true
- # become_method: sudo
- # become_user: root
+  #become_method: sudo
+  #become_user: root
+ 
   tasks:
         - name: Perform yum update of all packages
           yum:
