--- a/windowsinstall.yml
+++ b/windowsinstall.yml
@@ -4,7 +4,7 @@
 # http://docs.ansible.com/ansible/win_updates_module.html
 # https://docs.ansible.com/ansible/win_reboot_module.html
 
-- name:  Windows Update
+- name: Collect only facts returned by facter
   hosts: all
   gather_facts: true  
   
