--- a/windowsinstall.yml
+++ b/windowsinstall.yml
@@ -9,6 +9,10 @@
    gather_facts: true  
   
   tasks:
-   setup:
+  
    # - debug: var=vars
    # - debug: var=hostvars[inventory_hostname]
+   setup:
+      delegate_to: "{{item}}"
+      delegate_facts: True
+      with_items: "{{groups['elk']}}"
