--- a/linux.yml
+++ b/linux.yml
@@ -19,9 +19,9 @@
           async: 1
           poll: 0
 
-        - name: wait for 10 seconds
-          pause:
-          seconds: 10
+       # - name: wait for 10 seconds
+        #  pause:
+         # seconds: 10
 
         - name: wait for the system to reboot
           wait_for_connection:
