--- a/linux.yml
+++ b/linux.yml
@@ -9,12 +9,12 @@
   #become_user: root
  
   tasks:
-        name: Perform yum update of all packages
+        - name: Perform yum update of all packages
           yum:
             name: '*'
             state: latest
             
-        name: restart system to reboot to newest kernel
+        - name: restart system to reboot to newest kernel
           shell: "sleep 5 && reboot"
           async: 1
           poll: 0
@@ -23,14 +23,14 @@
         #  pause:
          # seconds: 10
 
-        name: wait for the system to reboot
+        - name: wait for the system to reboot
           wait_for_connection:
           connect_timeout: 20
           sleep: 5
           delay: 5
           timeout: 60
 
-      name: install epel-release
+      - name: install epel-release
           yum:
           name: epel-release
           state: latest
