--- a/linux.yml
+++ b/linux.yml
@@ -15,4 +15,6 @@
             state: latest
             
         - name: restart system to reboot to newest kernel
-          shell: "sleep 5 && reboot" async: 1 poll: 0
+          shell: "sleep 5 && reboot" 
+          async: 1 
+          poll: 0
