--- a/linux.yml
+++ b/linux.yml
@@ -22,3 +22,15 @@
         - name: wait for 10 seconds
           pause:
             seconds: 10
+
+        - name: wait for the system to reboot
+          wait_for_connection:
+            connect_timeout: 20
+            sleep: 5
+            delay: 5
+            timeout: 60
+            
+        - name: install epel-release
+          yum:
+           name: epel-release
+           state: latest
